--- a/paginas/CADASTRO E LOGIN/Login.html
+++ b/paginas/CADASTRO E LOGIN/Login.html
@@ -38,7 +38,7 @@
                    <input type="text" name="Email" size=40 maxlength=40 value="">
                    <br></br>
                     Senha:
-                   <input type="text" name="Senha" size=10 maxlenlegth=10 value="">
+                   <input type="password" name="Senha" size=10 maxlenlegth=10 value="">
                    <p align="center">
                     <input class="nv" width="50px" type=submit name=Entrar value= ENTRAR>
                     </p>
