--- a/paginas/CADASTRO E LOGIN/cadastro.html
+++ b/paginas/CADASTRO E LOGIN/cadastro.html
@@ -38,17 +38,17 @@
                    <input type="text" name="nome" size=40 maxlength=40 value="">
                    <br></br>
                    E-mail:
-                   <input type="text" name="Email" size=40 maxlength=40 value="">
+                   <input type="text" name="email" size=40 maxlength=40 value="">
                    <br></br>
                      CPF:
-                   <input type="text" name="CPF" size=20 maxlength=15 value="">
+                   <input type="text" name="cpf" size=20 maxlength=15 value="">
                    <br>
                    </br>
                     Telefone:
-                   <input type="text" name="Telefone" size=10 maxlength=10 value="">
+                   <input type="text" name="telefone" size=10 maxlength=10 value="">
                    <br></br>
                     Senha:
-                   <input type="text" name="Senha" size=10 maxlenlegth=10 value="">
+                   <input type="password" name="senha" size=10 maxlenlegth=10 value="">
                    <p align="center">
                     <input class="nv" width="50px" type=submit name=enviar value= ENVIAR>
                     </p>
