Conexão do cadastro

--- a/paginas/CADASTRO E LOGIN/cadastro.html
+++ b/paginas/CADASTRO E LOGIN/cadastro.html
@@ -30,7 +30,8 @@
          <center>  
           <div id="formulario"  >
                 <br></br>
-                <form>
+                <form action="conexao.php" method="POST">
+
                     <fieldset><legend>Cadastro</legend>
                         
                       <p align ="center" >
