Organizaçao das pastas e seus respectivos nomes.

--- a/site/login.html
+++ b/site/login.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Cadastro</title>
-  <link rel="Stylesheet" type="text/css" href="estilo.css" media="screen" />
+  <link rel="Stylesheet" type="text/css" href="css/main.css" media="screen" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <img src "logo.png">
     <center>
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Quem somos</a></li>
         <li><a href="#">Servicos</a></li>
         <li><a href="#">Contato</a></li>
