--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Kids World Festas</title>  
-<link rel= "Stylesheet" type="text/css" href= "estilo.css" media="screen"/>
+<link rel= "stylesheet" type="text/css" href= "css/main.css" media="screen"/>
  </head>
 <body>
     
@@ -8,8 +8,8 @@
 <div id="login">
     
         <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Cadastre-se</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="cadastro.php">Cadastre-se</a></li>
         </ul>
         </div>
 
@@ -29,7 +29,7 @@
 
        <div id="conteudo">
          <center>  
-          <img src="fotoilustrativa.png">
+          <img src="img/fotoilustrativa.png">
           </center>
 
        </div>
