--- a/site/index.html
+++ b/site/index.html
@@ -59,6 +59,12 @@
                     <li>
                         <a href="#">Contato</a>
                     </li>
+                    <li>
+                        <a href="#">Agendar</a>
+                    </li>
+                    <li>
+                        <a href="#">Meus Agendamentos</a>
+                    </li>
                 </ul>
             </div>
             <div class="sign">
