--- a/site/index.html
+++ b/site/index.html
@@ -70,7 +70,7 @@
             <div class="sign">
                 <ul>
                     <li>
-                        <a href="./autenticacao/loginView.php">Logue-se</a>
+                        <a href="./autenticacao/loginView.php">Logar</a>
                     </li>
                     <li>
                         <a href="./cadastro/cadastroView.php">Cadastrar</a>
