Tentativa GET Agendar

--- a/site/index.html
+++ b/site/index.html
@@ -60,7 +60,7 @@
                         <a href="#">Contato</a>
                     </li>
                     <li>
-                        <a href="./agendar/agendarView.html">Agendar</a>
+                        <a href="./agendar/agendarView.php">Agendar</a>
                     </li>
                     <li>
                         <a href="#">Meus Agendamentos</a>
