--- a/site/index.html
+++ b/site/index.html
@@ -81,7 +81,7 @@
     </main>
     <div class="main100">
         <div class="slide-principal">
-            <img src="./img/teste.png" />
+            <img src="./img/test.jpg" />
             <img src="./img/teste.png" />
             <img src="./img/teste.png" />
             <img src="./img/teste.png" />
