--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -193,11 +193,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/pula-pula.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>Pula-Pula</h4>
+            <p class="text-muted">Brinquedos</p>
           </div>
         </div>
       </div>
@@ -675,14 +675,13 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Pula-Pula</h2>
+                <!--<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>-->
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/pula-pula.jpg" alt="">
+                <p>Pula-Pula do Amor. Amém</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Window</li>
-                  <li>Category: Photography</li>
+                  <li>Preço: R$ 2.000.000.000,00</li>
+                  <li>Categoria: Brinquedo</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
