--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -64,7 +64,7 @@
         <div class="intro-lead-in">Seja bem-vindo ao nosso site!</div>
         <div class="intro-heading text-uppercase">Kids World Festas</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Login</a>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Cadastre-se</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./cadastro/cadastroView.php">Cadastre-se</a>
       </div>
     </div>
   </header>
