--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -37,17 +37,20 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Produtos</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#portifolio">Produtos</a>
+              </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Agendamento</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="./login/loginView.html">login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="./cadastro/cadastroView.php">Cadastre-se</a>
           </li>
         </ul>
       </div>
@@ -60,42 +63,14 @@
       <div class="intro-text">
         <div class="intro-lead-in">Seja bem-vindo ao nosso site!</div>
         <div class="intro-heading text-uppercase">Kids World Festas</div>        
-       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./cadastro/cadastroView.php">Cadastre-se</a>
+       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portifolio">Produtos</a>
       </div>
     </div>
   </header>
 
-  <!-- Services -->
-  <section class="page-section" id="services">
-        <center>
-            <form action="./login/loginCtrl.php" method="POST">
-                <h2>Login</h2>
-                <p>
-                    <label for="email">E-mail:</label>
-                    <input type="text" placeholder="Digite seu e-mail" name="email" id="email" value="">
-                </p>
-                <p>
-                    <label for="senha">Senha:</label>
-                    <input type="password" placeholder="Digite sua senha" name="senha" id="senha" value="">
-                </p>
-                <input type="submit" value="Entrar">
-                <?php
-                    session_start();
-                    if(array_key_exists('erro', $_SESSION) == true){
-                        $erro = $_SESSION["erro"];
-                        echo "<br><b>$erro</br>";
-                        session_unset();
-                    }
-                ?>
-                <p>
-                        <a href="./cadastro.php">Cadastre-se</a>
-                </p>
-            </form>
-        </center>
-                  </section>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
+  <section class="bg-light page-section" id="portifolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -266,12 +241,13 @@
   
 
   <!-- Contact -->
-  <section class="page-section" id="contact">
+  <section class="bg-light page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Agendamento</h2>
           <h3 class="section-subheading text-muted">Agende a data da sua festa conosco.</h3>
+          <h3 class="section-subheading text-muted">OS preços selecionados no site são para 4 horas de festas, o maximo de 100 pessoas e para festas infantis. Caso seja uma empresa ou sua festa tenha mais de 4 horas de festas ou mais de 100 pessoas, entre em contato conosco pelo whatsapp ou email.</h3>
         </div>
       </div>
       <div class="row">
@@ -280,24 +256,46 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Digite seu nome *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control" id="data" type="text" placeholder="Data do evento *" required="required" data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Digite seu email *" required="required" data-validation-required-message="Please enter your email address.">
+                  Horário <input class="form-control" id="horario" type="time" placeholder="Horário do evento *" required="required" data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="digite seu telefone*" required="required" data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" id="endereco" type="text" placeholder="Endereço do evento *" required="required" data-validation-required-message="Please enter your email address.">
+                    <p class="help-block text-danger"></p>
+                  </div>
+
+                <div class="form-group">
+                  <input class="form-control" id="Bairro" type="text" placeholder="digite o bairro do evento *" required="required" data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  Total<label class="form-control" id="total" type="number" aria-placeholder="total"></label>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
+              
+            <div class= "col-md-6">
+                <h1 class="section-subheading text-muted">Selecione os produtos desejados.</h1>
+                <input type="radio" name="Pipoqueira de cinema1" value="Pipoqueira de cinema1">Pipoqueira (220V) <br>
+                <input type="radio" name="Pipoqueira de cinema2" value="Pipoqueira de cinema2">Pipoqueira (120V) <br>
+                <input type="radio" name="Máquina de algodão doce1" value="Máquina de algodão doce vermelha"> Maquina de algodão doce vermelha
+                <br>
+                <input type="radio" name="Máquina de algodão doce2" value="Máquina de algodão doce Prata"> Maquina de algodão doce prateada<br>
+                <input type="radio" name="trenzinho de lanches" value="trenzinho de lanches">Trenzinho de lanches <br>
+                <input type="radio" name="Máquina de churros" value="Máquina de churros"> Máquina de churros <br>
+                <input type="radio" name="Cama elástica" value="Cama elástica">Cama elástica <br>
+                <input type="radio" name="Crepe" value="Crepe"> Crepe <br>
+                <h1 class="section-subheading text-muted"> Selecione a Zona</h1>
+                <input type="radio" name="norte" value="zn_norte">Zona Norte <br>
+                <input type="radio" name="Sul" value=" zn_sul">Zona Sul <br>
+                <input type="radio" name="Leste" value="zn_leste"> Zona Leste<br>
+                <input type="radio" name="Oeste" value=" zn_oeste">Zona Oeste <br>
+                <input type="radio" name="Baixada" value="zn_baixada">Baixada Fluminense <br>
+            </div>
+
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
@@ -315,7 +313,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Kids World Festas 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
