--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link js-scroll-trigger" href="./login/loginView.html">login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="./cadastro/cadastroView.php">Cadastre-se</a>
+            <a class="nav-link js-scroll-trigger" href="./cadastro/cadastroView.html">Cadastre-se</a>
           </li>
         </ul>
       </div>
@@ -373,7 +373,7 @@
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                 Fechar</button>
               </div>
             </div>
           </div>
@@ -404,7 +404,7 @@
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Fechar</button>
               </div>
             </div>
           </div>
@@ -436,7 +436,7 @@
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                   Fechar</button>
               </div>
             </div>
           </div>
@@ -469,7 +469,7 @@
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Fechar</button>
               </div>
             </div>
           </div>
@@ -507,7 +507,7 @@
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Fechar</button>
               </div>
             </div>
           </div>
@@ -544,7 +544,7 @@
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Fechar</button>
               </div>
             </div>
           </div>
