Correção de erros da descrição.

--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -189,7 +189,7 @@
                   <h4 class="subheading"> O início</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">A história da umpresa teve início em 2016, quando fizemos nossa primeira festa com algodão doce e pipoqueira de cinema.</p>
+                  <p class="text-muted">A história da empresa teve início em 2016, quando fizemos nossa primeira festa com algodão doce e pipoqueira de cinema.</p>
                 </div>
               </div>
             </li>
