Links redes sociais funcionando/ transf. o agendamento p/ a pag. usuario

--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -255,7 +255,7 @@
     
           <form id="contactForm" name="Buscprodutos" novalidate="novalidate">
             <div class="row">
-              <div class="col-md-4 " class="col-md-offset-4"> 
+              <div class="col-md-4 "> 
                 <div class="form-group">
                  Data: <input class="form-control" id="data" type="date" placeholder="Data do evento *" required="required" data-validation-required-message="Por favor, digite a data do evento.">
                   <p class="help-block text-danger"></p>
@@ -263,47 +263,12 @@
                 <div class="form-group">
                   Horário: <input class="form-control" id="horario" type="time" placeholder="Horário do evento *" required="required" data-validation-required-message="Por favor, digite o horário do evento.">
                   <p class="help-block text-danger"></p>
-                </div>
-               <!-- tirando os dados 
-                <div class="form-group">
-                    <input class="form-control" id="endereco" type="text" placeholder="Digite o endereço do evento *" required="required" data-validation-required-message="Por favor, digite o endereço do evento.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-
-                <div class="form-group">
-                  <input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  Total<label class="form-control" id="total" type="number" aria-placeholder="total"></label>
-                </div>
-              </div>
-            -->
-             <!-- tirando os produtos 
-            <div class= "col-md-6">
-                <h1 class="section-subheading text-muted">Selecione os produtos desejados</h1>
-                <input type="checkbox" name="Pipoqueira de cinema1" value="Pipoqueira de cinema1"> Pipoqueira (220V) <br>
-                <input type="checkbox" name="Pipoqueira de cinema2" value="Pipoqueira de cinema2"> Pipoqueira (120V) <br>
-                <input type="checkbox" name="Máquina de algodão doce1" value="Máquina de algodão doce vermelha"> Maquina de algodão doce vermelh <br>
-                <input type="checkbox" name="Máquina de algodão doce2" value="Máquina de algodão doce Prata"> Maquina de algodão doce prateada<br>
-                <input type="checkbox" name="trenzinho de lanches" value="trenzinho de lanches"> Trenzinho de lanches <br>
-                <input type="checkbox" name="Máquina de churros" value="Máquina de churros"> Máquina de churros <br>
-                <input type="checkbox" name="Cama elástica" value="Cama elástica"> Cama elástica <br>
-                <input type="checkbox" name="Crepe" value="Crepe"> Crepe <br>
-                <h1 class="section-subheading text-muted"> Selecione a Zona</h1>
-                <input type="checkbox" name="norte" id="zona" value="zn_norte" onclick="verificar()"> Zona Norte <br>
-                <input type="checkbox" name="Sul" id="zona" value=" zn_sul" onclick="verificar()"> Zona Sul <br>
-                <input type="checkbox" name="Leste" id="zona" value="zn_leste" onclick="verificar()"> Zona Leste<br>
-                <input type="checkbox" name="Oeste" id="zona" value=" zn_oeste" onclick="verificar()"> Zona Oeste <br>
-                <input type="checkbox" name="Baixada" id="zona" value="zn_baixada" onclick="verificar()"> Baixada Fluminense <br>
-            </div>
-          -->
-
+                </div>               
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
                 <br>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar</button>
+                <button id="Buscprodutos" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar</button>
               </div>
             </div>
       
@@ -323,20 +288,20 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
+              <a href="https://www.facebook.com/LehPipocaeAlgodao">
+                <i class="fab fa-facebook"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
+              <a href="https://www.instagram.com/kids_word_festas/">
+                <i class="fab fa-instagram"></i>
               </a>
-            </li>
+            </li>   
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-whatsapp"></i>
               </a>
-            </li>
+            </li>         
           </ul>
         </div>
         <div class="col-md-4">
