--- a/startbootstrap-agency-gh-pages/agendamento2.html
+++ b/startbootstrap-agency-gh-pages/agendamento2.html
@@ -45,7 +45,7 @@
                 <h1 class="section-subheading text-muted">Selecione os produtos desejados</h1>
                 <input type="checkbox" name="Pipoqueira de cinema1" value="Pipoqueira de cinema1"> Pipoqueira (220V) <br>
                 <input type="checkbox" name="Pipoqueira de cinema2" value="Pipoqueira de cinema2"> Pipoqueira (120V) <br>
-                <input type="checkbox" name="Máquina de algodão doce1" value="Máquina de algodão doce vermelha"> Maquina de algodão doce  <br>
+                <input type="checkbox" name="Máquina de algodão doce" value="Máquina de algodão"> Maquina de algodão doce  <br>
                 <input type="checkbox" name="trenzinho de lanches" value="trenzinho de lanches"> Trenzinho de lanches <br>
                 <input type="checkbox" name="Máquina de churros" value="Máquina de churros"> Máquina de churros <br>
                 <input type="checkbox" name="Cama elástica" value="Cama elástica"> Cama elástica <br>
