--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -47,10 +47,10 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Agendamento</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="./login/loginView.html">login</a>
+            <a class="nav-link js-scroll-trigger" href="./login/loginView.php">login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="./cadastro/cadastroView.html">Cadastre-se</a>
+            <a class="nav-link js-scroll-trigger" href="./cadastro/cadastroView.php">Cadastre-se</a>
           </li>
         </ul>
       </div>
