--- a/startbootstrap-agency-gh-pages/cadastro/cadastroView.html
+++ b/startbootstrap-agency-gh-pages/cadastro/cadastroView.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $('#telefone').mask('(00) 0000-0000'); //Telefone
-            $('#cep').mask('00000-000'); //CEP
+            $('#cpf').mask('000.000.000-00'); //CEP
             $('#valor').mask('000.000.000.000.000,00', {
                 reverse: true
             }); //Dinheiro
