--- a/startbootstrap-agency-gh-pages/index-admin.html
+++ b/startbootstrap-agency-gh-pages/index-admin.html
@@ -220,54 +220,55 @@
 
     </section>
 
+    <form action="inserirCtrl.php" method="POST">
+        <section class=" bg-light   page-section" id="produtos-inserir">
 
-    <section class=" bg-light   page-section" id="produtos-inserir">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">Produtos</h2>
-                    <h3 class="section-subheading text-muted">Insira novos produtos no seu site.</h3>
-                </div>
+            <div class="container">
                 <div class="row">
-                    <br class="col-lg-12">
-                    <br id="contactForm" name="sentMessage" novalidate="novalidate">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading text-uppercase">Produtos</h2>
+                        <h3 class="section-subheading text-muted">Insira novos produtos no seu site.</h3>
+                    </div>
+                    <div class="row">
+                        <br class="col-lg-12">
+                        <br id="contactForm" name="sentMessage" novalidate="novalidate">
 
 
-                    <div class="col-md-4"></div>
-                    <input class="form-control" id="nome" type="text" placeholder="Digite o nome *" required="required" data-validation-required-message="Please enter your name.">
-                    <p class="help-block text-danger"></p>
+                        <div class="col-md-4"></div>
+                        <input class="form-control" id="nome" type="text" placeholder="Digite o nome *" required="required" data-validation-required-message="Please enter your name.">
+                        <p class="help-block text-danger"></p>
 
 
 
-                    <input class="form-control" id="preco" type="" placeholder="Digite o preço *" required="required" data-validation-required-message="Please enter your email address.">
-                    <p class="help-block text-danger"></p>
+                        <input class="form-control" id="preco" type="" placeholder="Digite o preço *" required="required" data-validation-required-message="Please enter your email address.">
+                        <p class="help-block text-danger"></p>
 
 
 
 
-                    <input class="form-control" id="descrição" type="text" placeholder=" Digite a descrição *" required="required" data-validation-required-message="Please enter your phone number.">
-                    <p class="help-block text-danger"></p>
+                        <input class="form-control" id="descricao" type="text" placeholder=" Digite a descrição *" required="required" data-validation-required-message="Please enter your phone number.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+
+                    <form id="upload" method="post" enctype="multipart/form-data">
+                        <ul>
+                            <li>
+                                <h4>Selecione uma imagem</h4>
+                                <input type="file" id="arquivo" name="arquivo" accept="image/*" />
+                            </li>
+                        </ul>
+                    </form>
+                </div>
+                <div class="clearfix"></div>
+                <div class="col-lg-12 text-center">
+                    <div id="success"></div>
+                    <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Inserir</button>
+
                 </div>
 
-                <form id="upload" method="post" enctype="multipart/form-data">
-                    <ul>
-                        <li>
-                            <h4>Selecione uma imagem</h4>
-                            <input type="file" id="arquivo" name="arquivo" accept="image/*" />
-                        </li>
-                    </ul>
-                </form>
-            </div>
-            <div class="clearfix"></div>
-            <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Inserir</button>
-
-            </div>
-            </form>
-        </div>
-        </div>
+    </form>
+    </div>
+    </div>
 
 
 
