--- a/startbootstrap-agency-gh-pages/index-cliente.html
+++ b/startbootstrap-agency-gh-pages/index-cliente.html
@@ -236,13 +236,13 @@
        
           <form id="contactForm" name="Buscprodutos" novalidate="novalidate">
              <div class="row">
-              <div class="col-md-4 "> 
-            <div class="form-group">
+              <div class=" col-lg-12 "> 
+            <div class=" col-md-4 col-sm-6 form-group">
               Data: <input class="form-control" id="data" type="date" placeholder="Data do evento *" required="required"
                 data-validation-required-message="Por favor, digite a data do evento.">
               <p class="help-block text-danger"></p>
             </div>
-            <div class="form-group">
+            <div class=" col-md-4 col-sm-6  form-group">
               Horário: <input class="form-control" id="horario" type="time" placeholder="Horário do evento *"
                 required="required" data-validation-required-message="Por favor, digite o horário do evento.">
               <p class="help-block text-danger"></p>
