--- a/startbootstrap-agency-gh-pages/agendamento2.html
+++ b/startbootstrap-agency-gh-pages/agendamento2.html
@@ -27,30 +27,7 @@
 <body id="page-top">
     <section class="bg-light page-section" id="portfolio">
 
-        <div class="col-sm-6">
-            <div class="form-group">
-                Logradouro: <input class="form-control" id="endereco" type="text" placeholder="Digite o endereço do evento *" required="required" data-validation-required-message="Por favor, digite o endereço do evento.">
-                <p class="help-block text-danger"></p>
-            </div>
-
-            <div class="form-group">
-                CEP: <input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
-                <p class="help-block text-danger"></p>
-            </div>
-            <div class="form-group">
-                Complemento: <input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
-                <p class="help-block text-danger"></p>
-            </div>
-            <div class="form-group">
-                Cidade:<input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
-                <p class="help-block text-danger"></p>
-            </div>
-            <div class="form-group">
-                UF:<input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
-                <p class="help-block text-danger"></p>
-            </div>
-        </div>
-        </div>
+        
 
         <div class="col-md-6">
             <h1 class="section-subheading text-muted">Selecione os produtos desejados</h1>
@@ -68,8 +45,34 @@
             <input type="checkbox" name="Oeste" id="zona" value=" zn_oeste" onclick="verificar()"> Zona Oeste <br>
             <input type="checkbox" name="Baixada" id="zona" value="zn_baixada" onclick="verificar()"> Baixada Fluminense <br>
         </div>
-        <div class="form-group">
+        <div class="col-sm-3 form-group">
             Total<label class="form-control" id="total" type="number" aria-placeholder="total"></label>
         </div>
+
+        <div class="col-sm-6">
+                <h1 class="section-subheading text-muted">Indique o endereço do evento</h1>
+                <div class="form-group">
+                    Logradouro: <input class="form-control" id="endereco" type="text" placeholder="Digite o endereço do evento *" required="required" data-validation-required-message="Por favor, digite o endereço do evento.">
+                    <p class="help-block text-danger"></p>
+                </div>
+    
+                <div class="form-group">
+                    CEP: <input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
+                    <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                    Complemento: <input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
+                    <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                    Cidade:<input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
+                    <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                    UF:<input class="form-control" id="Bairro" type="text" placeholder="Digite o bairro do evento *" required="required" data-validation-required-message="Por favor, digite o bairro do evento.">
+                    <p class="help-block text-danger"></p>
+                </div>
+            </div>
+            </div>
     </section>
 </body>
